    * Fix DND of custom artwork images in the main window
    * Fix breadcrumb icon in the library while browsing an album while in Artist view
    * Fix saving the visibility flag of tabs: https://github.com/multani/sonata/issues/45
    * Fix hiding/showing the main window even if it's not the active widget:
      https://github.com/multani/sonata/issues/43

Internal changes
''''''''''''''''

    * Simplified the `current` module. It should also now use less memory than before.
    * Provide a new GObject signal to notify on artwork change and artwork reset.


1.7a1 (2013-02-08)
------------------

New features
''''''''''''

    * Fetch covers from Last.fm instead of Rhapsody.com
    * Custom plugins are now stored along the configuration file in ~/.config/sonata/plugins/
    * Switch to Python 3 and Gtk 3 (Jörg Thalheim & Adam Dane)
    * More items in the tray menu (Kirill Lashuk)
    * Better fullscreen support (Kirill Lashuk)
    * Toggle fullscreen from the command line (Daniel)
    * Support MPD's "consume" mode (Anton Lashkov)
    * Use more default icons in the context menus (Anton Lashkov)
    * Load only the most recent of plugins with the same names

Bug fixes
'''''''''

    * Fix population of the "Save to playlist" menu (Zhihao Yuan)
    * Prevent multiple entries and improve art search with multi-CD albums (Kirill Lashuk)
    * Fixes weird show up if Sonata is not on the current workspace (Kirill Lashuk)
    * Scrobble after seeking to the beginning (Kirill Lashuk)
    * The lyricswiki plugin should now work again (Jonathan Ballet)
    * Fix UI status after reconnection to MPD (Jonathan Ballet)
    * Fix crash when searching the library (Kirill Lashuk)

Internal changes
''''''''''''''''

    * Simpler API for cover fetching plugins
    * Lot of code cleanup and internal changes
    * Removed Sugar UI support
    * Use Glade files to describe the interface and GtkBuilder to build the interface
    * More systematic configuration file management